k8s/ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: domain.test
      http:
        paths:
          - path: /go-app/(.*)
            pathType: Prefix
            backend:
              service:
                name: go-app
                port:
                  number: 80
